# qtcrop

./: .gitignore  CMakeLists.txt  CropInterface.qml  CropRectangle.qml  Main.qml  README.md  TrimProgressBar.qml  Welcome.qml  context_obj.cpp  context_obj.h  main.cpp
